test/basic/good/core039.lat
int main() {
	f(42);
	printInt(0+0);
	return 0;
}

void f(int x) {
	printInt(1);
}
