test/basic/bad/core011.lat
int foo(int x){
	return x;
}

int main() {
	foo(1+true);
	return 0;
}	
